// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaxesForm Should displays an error message on submission error 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="form-access my-auto"
        data-testid="taxes-form"
      >
        <form>
          <span>
            Tax calculate
          </span>
          <div
            aria-live="polite"
            class=""
            data-testid="form-input"
          >
            <div
              class="form-group"
            >
              <input
                aria-invalid="false"
                aria-label="income"
                class="form-control"
                id="income"
                name="income"
                placeholder="Type your income - $"
                type="text"
              />
            </div>
          </div>
          <div
            aria-live="polite"
            class=""
            data-testid="form-input"
          >
            <div
              class="form-group"
            >
              <input
                aria-invalid="false"
                aria-label="year"
                class="form-control"
                id="year"
                name="year"
                placeholder="Type your tax year"
                type="text"
              />
            </div>
          </div>
          <button
            class="btn btn-primary"
            type="submit"
          >
            Calculate
          </button>
          <p
            class="font-serif text-sm text-left block text-red-600 mt-5 text-center text-danger"
            data-testid="error-message"
          >
            Something went wrong, please try again
          </p>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="form-access my-auto"
      data-testid="taxes-form"
    >
      <form>
        <span>
          Tax calculate
        </span>
        <div
          aria-live="polite"
          class=""
          data-testid="form-input"
        >
          <div
            class="form-group"
          >
            <input
              aria-invalid="false"
              aria-label="income"
              class="form-control"
              id="income"
              name="income"
              placeholder="Type your income - $"
              type="text"
            />
          </div>
        </div>
        <div
          aria-live="polite"
          class=""
          data-testid="form-input"
        >
          <div
            class="form-group"
          >
            <input
              aria-invalid="false"
              aria-label="year"
              class="form-control"
              id="year"
              name="year"
              placeholder="Type your tax year"
              type="text"
            />
          </div>
        </div>
        <button
          class="btn btn-primary"
          type="submit"
        >
          Calculate
        </button>
        <p
          class="font-serif text-sm text-left block text-red-600 mt-5 text-center text-danger"
          data-testid="error-message"
        >
          Something went wrong, please try again
        </p>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TaxesForm Should renders the form 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="form-access my-auto"
        data-testid="taxes-form"
      >
        <form>
          <span>
            Tax calculate
          </span>
          <div
            aria-live="polite"
            class=""
            data-testid="form-input"
          >
            <div
              class="form-group"
            >
              <input
                aria-invalid="false"
                aria-label="income"
                class="form-control"
                id="income"
                name="income"
                placeholder="Type your income - $"
                type="text"
              />
            </div>
          </div>
          <div
            aria-live="polite"
            class=""
            data-testid="form-input"
          >
            <div
              class="form-group"
            >
              <input
                aria-invalid="false"
                aria-label="year"
                class="form-control"
                id="year"
                name="year"
                placeholder="Type your tax year"
                type="text"
              />
            </div>
          </div>
          <button
            class="btn btn-primary"
            type="submit"
          >
            Calculate
          </button>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="form-access my-auto"
      data-testid="taxes-form"
    >
      <form>
        <span>
          Tax calculate
        </span>
        <div
          aria-live="polite"
          class=""
          data-testid="form-input"
        >
          <div
            class="form-group"
          >
            <input
              aria-invalid="false"
              aria-label="income"
              class="form-control"
              id="income"
              name="income"
              placeholder="Type your income - $"
              type="text"
            />
          </div>
        </div>
        <div
          aria-live="polite"
          class=""
          data-testid="form-input"
        >
          <div
            class="form-group"
          >
            <input
              aria-invalid="false"
              aria-label="year"
              class="form-control"
              id="year"
              name="year"
              placeholder="Type your tax year"
              type="text"
            />
          </div>
        </div>
        <button
          class="btn btn-primary"
          type="submit"
        >
          Calculate
        </button>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TaxesForm Should renders the form with loading button state 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="form-access my-auto"
        data-testid="taxes-form"
      >
        <form>
          <span>
            Tax calculate
          </span>
          <div
            aria-live="polite"
            class=""
            data-testid="form-input"
          >
            <div
              class="form-group"
            >
              <input
                aria-invalid="false"
                aria-label="income"
                class="form-control"
                id="income"
                name="income"
                placeholder="Type your income - $"
                type="text"
              />
            </div>
          </div>
          <div
            aria-live="polite"
            class=""
            data-testid="form-input"
          >
            <div
              class="form-group"
            >
              <input
                aria-invalid="false"
                aria-label="year"
                class="form-control"
                id="year"
                name="year"
                placeholder="Type your tax year"
                type="text"
              />
            </div>
          </div>
          <button
            class="btn btn-primary"
            disabled=""
            type="submit"
          >
            Calculating...
          </button>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="form-access my-auto"
      data-testid="taxes-form"
    >
      <form>
        <span>
          Tax calculate
        </span>
        <div
          aria-live="polite"
          class=""
          data-testid="form-input"
        >
          <div
            class="form-group"
          >
            <input
              aria-invalid="false"
              aria-label="income"
              class="form-control"
              id="income"
              name="income"
              placeholder="Type your income - $"
              type="text"
            />
          </div>
        </div>
        <div
          aria-live="polite"
          class=""
          data-testid="form-input"
        >
          <div
            class="form-group"
          >
            <input
              aria-invalid="false"
              aria-label="year"
              class="form-control"
              id="year"
              name="year"
              placeholder="Type your tax year"
              type="text"
            />
          </div>
        </div>
        <button
          class="btn btn-primary"
          disabled=""
          type="submit"
        >
          Calculating...
        </button>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
